// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/message/demo/custom-style.vue correctly 1`] = `
<button class="ant-btn ant-btn-default" type="button">
  <!----><span>Customized style</span>
</button>
`;

exports[`renders ./components/message/demo/duration.vue correctly 1`] = `
<button class="ant-btn ant-btn-default" type="button">
  <!----><span>Customized display duration</span>
</button>
`;

exports[`renders ./components/message/demo/hook.vue correctly 1`] = `
<!--teleport start-->
<!--teleport end-->
<button class="ant-btn ant-btn-primary" type="button">
  <!----><span>Display normal message</span>
</button>
`;

exports[`renders ./components/message/demo/info.vue correctly 1`] = `
<button class="ant-btn ant-btn-primary" type="button">
  <!----><span>Display normal message</span>
</button>
`;

exports[`renders ./components/message/demo/loading.vue correctly 1`] = `
<button class="ant-btn ant-btn-default" type="button">
  <!----><span>Display a loading indicator</span>
</button>
`;

exports[`renders ./components/message/demo/other.vue correctly 1`] = `
<div class="ant-space ant-space-horizontal ant-space-align-center">
  <div class="ant-space-item" style="margin-right: 8px;"><button class="ant-btn ant-btn-default" type="button">
      <!----><span>Success</span>
    </button></div>
  <!---->
  <div class="ant-space-item" style="margin-right: 8px;"><button class="ant-btn ant-btn-default" type="button">
      <!----><span>Error</span>
    </button></div>
  <!---->
  <div class="ant-space-item"><button class="ant-btn ant-btn-default" type="button">
      <!----><span>Warning</span>
    </button></div>
  <!---->
</div>
`;

exports[`renders ./components/message/demo/thenable.vue correctly 1`] = `
<button class="ant-btn ant-btn-default" type="button">
  <!----><span>Display a sequence of message</span>
</button>
`;

exports[`renders ./components/message/demo/update.vue correctly 1`] = `
<button class="ant-btn ant-btn-primary" type="button">
  <!----><span>Open the message box (update by key)</span>
</button>
<br>
<br>
<button class="ant-btn ant-btn-primary" type="button">
  <!----><span>Open the message box (update by reactive)</span>
</button>
`;
